[gd_scene load_steps=23 format=2]

[ext_resource path="res://Scripts/Main.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Footer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fonts/ColumnFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Fonts/heebo.regular.ttf" type="DynamicFontData" id=4]

[sub_resource type="DynamicFont" id=16]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.352941, 0.337255, 0.403922, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.352941, 0.337255, 0.403922, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=3]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.247059, 0.239216, 0.286275, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=17]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=5]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.917647, 0.917647, 0.917647, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=18]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.803922, 0.721569, 1, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=6]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.352941, 0.337255, 0.403922, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=9]
content_margin_left = 10.0
content_margin_right = 10.0
content_margin_top = 10.0
content_margin_bottom = 10.0
bg_color = Color( 0.352941, 0.337255, 0.403922, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.207843, 0.2, 0.227451, 1 )
border_width_top = 20
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
expand_margin_top = 20.0

[sub_resource type="Theme" id=2]
Button/fonts/font = SubResource( 16 )
Button/styles/hover = SubResource( 4 )
Button/styles/normal = SubResource( 1 )
Button/styles/pressed = SubResource( 3 )
Label/colors/font_color = Color( 1, 1, 1, 1 )
LineEdit/colors/clear_button_color = Color( 0, 0, 0, 1 )
LineEdit/colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
LineEdit/colors/cursor_color = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color = Color( 0.0352941, 0.0352941, 0.0352941, 1 )
LineEdit/colors/font_color_selected = Color( 0, 0, 0, 1 )
LineEdit/colors/font_color_uneditable = Color( 0, 0, 0, 1 )
LineEdit/colors/selection_color = Color( 0.803922, 0.721569, 1, 1 )
LineEdit/constants/minimum_spaces = 0
LineEdit/fonts/font = SubResource( 17 )
LineEdit/icons/clear = null
LineEdit/styles/focus = null
LineEdit/styles/normal = SubResource( 5 )
LineEdit/styles/read_only = null
PopupMenu/colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
PopupMenu/colors/font_color_accel = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_disabled = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_hover = Color( 0, 0, 0, 1 )
PopupMenu/colors/font_color_separator = Color( 0, 0, 0, 1 )
PopupMenu/constants/hseparation = 10
PopupMenu/constants/vseparation = 10
PopupMenu/fonts/font = SubResource( 18 )
PopupMenu/icons/checked = null
PopupMenu/icons/radio_checked = null
PopupMenu/icons/radio_unchecked = null
PopupMenu/icons/submenu = null
PopupMenu/icons/unchecked = null
PopupMenu/styles/hover = SubResource( 7 )
PopupMenu/styles/labeled_separator_left = null
PopupMenu/styles/labeled_separator_right = null
PopupMenu/styles/panel = SubResource( 6 )
PopupMenu/styles/panel_disabled = null
PopupMenu/styles/separator = null
TextEdit/styles/normal = SubResource( 9 )
WindowDialog/colors/title_color = Color( 0.12549, 0.12549, 0.12549, 1 )
WindowDialog/styles/panel = SubResource( 8 )

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.662745, 1, 0.67451, 1 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.439216, 0, 0, 0 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.839216, 0.662745, 1, 1 )

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.662745, 0.705882, 1, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 1, 0.662745, 0.662745, 1 )

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 2 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.129412, 0.129412, 0.129412, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
margin_left = 32.0
margin_top = 16.0
margin_right = -80.0
margin_bottom = 56.0
custom_constants/separation = 11

[node name="BoardName" type="LineEdit" parent="HBoxContainer"]
margin_right = 450.0
margin_bottom = 40.0
rect_min_size = Vector2( 450, 0 )
placeholder_text = "Board Name..."

[node name="SearchTask" type="LineEdit" parent="HBoxContainer"]
margin_left = 461.0
margin_right = 831.0
margin_bottom = 40.0
rect_min_size = Vector2( 370, 0 )
placeholder_text = "Task Search.."

[node name="AddTaskButton" type="Button" parent="HBoxContainer"]
margin_left = 842.0
margin_right = 913.0
margin_bottom = 40.0
rect_min_size = Vector2( 70, 0 )
text = "Add Task"

[node name="LabelContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 77.0
margin_right = -48.0
margin_bottom = -483.0
custom_constants/separation = 10

[node name="ToDoLabel" type="Label" parent="LabelContainer"]
margin_top = 8.0
margin_right = 225.0
margin_bottom = 32.0
rect_min_size = Vector2( 225, 0 )
custom_fonts/font = ExtResource( 3 )
text = "TODO"
align = 1

[node name="ProgressLabel" type="Label" parent="LabelContainer"]
margin_left = 235.0
margin_top = 8.0
margin_right = 460.0
margin_bottom = 32.0
rect_min_size = Vector2( 225, 0 )
custom_fonts/font = ExtResource( 3 )
text = "IN PROGRESS"
align = 1

[node name="ReviewLabel" type="Label" parent="LabelContainer"]
margin_left = 470.0
margin_top = 8.0
margin_right = 695.0
margin_bottom = 32.0
rect_min_size = Vector2( 225, 0 )
custom_fonts/font = ExtResource( 3 )
text = "REVIEW/TESTING"
align = 1

[node name="DoneLabel" type="Label" parent="LabelContainer"]
margin_left = 705.0
margin_top = 8.0
margin_right = 930.0
margin_bottom = 32.0
rect_min_size = Vector2( 225, 0 )
custom_fonts/font = ExtResource( 3 )
text = "COMPLETED"
align = 1

[node name="ListContainers" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = 128.0
margin_right = -32.0
margin_bottom = -88.0
rect_clip_content = true
custom_constants/separation = 10

[node name="ToDoScroll" type="ScrollContainer" parent="ListContainers"]
margin_right = 230.0
margin_bottom = 384.0
rect_min_size = Vector2( 230, 380 )
follow_focus = true

[node name="ToDoContainer" type="VBoxContainer" parent="ListContainers/ToDoScroll"]
margin_right = 230.0
rect_min_size = Vector2( 230, 0 )
size_flags_vertical = 8
custom_constants/separation = 130

[node name="Footer" parent="ListContainers/ToDoScroll/ToDoContainer" instance=ExtResource( 2 )]

[node name="ProgressScroll" type="ScrollContainer" parent="ListContainers"]
margin_left = 240.0
margin_right = 470.0
margin_bottom = 384.0
grow_vertical = 0
rect_min_size = Vector2( 230, 380 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_editor_description_": ""
}

[node name="ProgressContainer" type="VBoxContainer" parent="ListContainers/ProgressScroll"]
custom_constants/separation = 130
alignment = 1

[node name="Footer" parent="ListContainers/ProgressScroll/ProgressContainer" instance=ExtResource( 2 )]
margin_right = 0.0

[node name="ReviewScroll" type="ScrollContainer" parent="ListContainers"]
margin_left = 480.0
margin_right = 710.0
margin_bottom = 384.0
grow_vertical = 0
rect_min_size = Vector2( 230, 380 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_editor_description_": ""
}

[node name="ReviewContainer" type="VBoxContainer" parent="ListContainers/ReviewScroll"]
custom_constants/separation = 130

[node name="Footer" parent="ListContainers/ReviewScroll/ReviewContainer" instance=ExtResource( 2 )]
margin_right = 0.0

[node name="DoneScroll" type="ScrollContainer" parent="ListContainers"]
margin_left = 720.0
margin_right = 950.0
margin_bottom = 384.0
grow_vertical = 0
rect_min_size = Vector2( 230, 380 )
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_editor_description_": ""
}

[node name="DoneTaskContainer" type="VBoxContainer" parent="ListContainers/DoneScroll"]
custom_constants/separation = 130

[node name="Footer" parent="ListContainers/DoneScroll/DoneTaskContainer" instance=ExtResource( 2 )]
margin_right = 0.0

[node name="NewTaskPopUp" type="WindowDialog" parent="."]
margin_left = 352.0
margin_top = 224.0
margin_right = 672.0
margin_bottom = 464.0

[node name="NewTaskText" type="LineEdit" parent="NewTaskPopUp"]
anchor_right = 1.0
margin_left = 32.0
margin_top = 32.0
margin_right = -32.0
margin_bottom = 66.0
placeholder_text = "New Task..."
caret_blink = true

[node name="ConfirmButton" type="Button" parent="NewTaskPopUp"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -96.0
margin_top = -40.0
margin_right = -26.0
margin_bottom = -16.0
text = "Confirm"

[node name="AssignName" type="LineEdit" parent="NewTaskPopUp"]
margin_left = 32.0
margin_top = 136.0
margin_right = 288.0
margin_bottom = 170.0
placeholder_text = "Assign Name..."

[node name="EstTime" type="LineEdit" parent="NewTaskPopUp"]
margin_left = 32.0
margin_top = 184.0
margin_right = 160.0
margin_bottom = 218.0
placeholder_text = "est time minutes..."

[node name="ImportanceOptions" type="OptionButton" parent="NewTaskPopUp"]
anchor_right = 1.0
margin_left = 32.0
margin_top = 88.0
margin_right = -32.0
margin_bottom = 112.0
custom_constants/arrow_margin = 5
align = 1

[node name="StoreButton" type="Button" parent="."]
margin_left = 32.0
margin_top = 552.0
margin_right = 110.0
margin_bottom = 572.0
text = "Store Data"

[node name="NewBoardButton" type="Button" parent="."]
margin_left = 872.0
margin_top = 504.0
margin_right = 970.0
margin_bottom = 538.0
text = "New Board"

[node name="LoadBoardButton" type="Button" parent="."]
margin_left = 872.0
margin_top = 552.0
margin_right = 955.0
margin_bottom = 572.0
text = "Load Board"

[node name="FileDialog" type="FileDialog" parent="."]
visible = true
margin_left = 96.0
margin_top = 96.0
margin_right = 824.0
margin_bottom = 424.0
window_title = "Open a File"
mode = 0
access = 1
filters = PoolStringArray( "*.json" )
current_dir = "user://"
current_path = "user://"

[node name="EstimatedTime" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -138.5
margin_top = -40.0
margin_right = 138.5
margin_bottom = -26.0
custom_fonts/font = SubResource( 15 )
text = "Total Estimated Project Time: 00:00 - 00:00"

[node name="CompleteBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -228.0
margin_top = -72.0
margin_right = 228.0
margin_bottom = -58.0
custom_styles/fg = SubResource( 10 )
custom_styles/bg = SubResource( 11 )
value = 100.0
percent_visible = false

[node name="TestingBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -228.0
margin_top = -72.0
margin_right = 228.0
margin_bottom = -58.0
custom_styles/fg = SubResource( 12 )
custom_styles/bg = SubResource( 11 )
value = 60.0
percent_visible = false

[node name="InProgressBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -228.0
margin_top = -72.0
margin_right = 228.0
margin_bottom = -58.0
custom_styles/fg = SubResource( 13 )
custom_styles/bg = SubResource( 11 )
value = 40.0
percent_visible = false

[node name="ToDoBar" type="ProgressBar" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -228.0
margin_top = -72.0
margin_right = 228.0
margin_bottom = -58.0
custom_styles/fg = SubResource( 14 )
custom_styles/bg = SubResource( 11 )
value = 20.0
percent_visible = false
